Fix responsive on small devices

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,7 +22,6 @@ html , body , #root {
     gap: var(--global-gap);
     display: flex;
     flex-direction: column;
-    /* z-index: 9999; */
     margin-bottom: 10cap;
   }
 
@@ -36,7 +35,7 @@ html , body , #root {
   }
 
   .todos-container * {
-    z-index: -999;
+    /* z-index: -999; */
   }
 
   .floating-button {
@@ -58,3 +57,25 @@ html , body , #root {
   .floating-button:hover {
     background-color: var(--button-color-hover);
   }
+
+
+
+
+  input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus,
+textarea {
+  font-size: 16px;
+}
