--- a/src/styles/TodoItem.css
+++ b/src/styles/TodoItem.css
@@ -8,7 +8,7 @@
     background-color: var(--secondary-color);
     border-radius: 10px;
     padding: 10px;
-    z-index: 99;
+    /* z-index: 99; */
 }
 
 .todo-item-container {
@@ -62,12 +62,13 @@
 
 .todo-item-checkbox-button-checked-icon {
     position: absolute;
-    top: .2cap;
+    top: .3cap;
     left: .3cap;
     width: 2cap;
     height: 2cap;
     color: var(--text-color);
-    z-index: 10;
+    /* z-index: 10; */
+    z-index: 9999;
 }
 .todo-item-text {
     font-size: 1.2em;
